Bug 154680 - Typing into font family field shows autocompleted font name as missing, when multiple cells selected with different fonts
Summary: Typing into font family field shows autocompleted font name as missing, when ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-04-06 13:07 UTC by Buovjaga
Modified: 2023-04-07 18:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2023-04-06 13:07:21 UTC
1. Open attachment 186097 [details]
2. Select AD6:AD7 so the font family field in the toolbar becomes blank
3. Focus into the font family field and start typing Liberation

It is displayed in italics and tooltip says the font is missing.

Also on Windows.

Bibisected with linux-64-7.0 to b66b80485d855767a78e688e9e989ca0b104e0d8
tdf#134601 set entry font as combobox control font to take effect
Comment 1 m.a.riosv 2023-04-06 14:09:56 UTC
Sorry, where or what is the font family field?

What I can see is a Font field, as D6 (Liberation Sans) has a different font than D7 (Liberation Serif), when both are selected the field becomes blank.

I don't know if the Italic is to show that something is changing, not for all cells.

Selecting e.g. Liberation Sans for both cells, and then begin to typing 'Courier' in the font field, doesn't show it in italics.
Comment 2 Buovjaga 2023-04-06 14:16:47 UTC
(In reply to m.a.riosv from comment #1)
> Sorry, where or what is the font family field?

You found it.
Comment 3 Colin 2023-04-06 14:46:08 UTC
(In reply to Buovjaga from comment #0)
> 1. Open attachment 186097 [details]
> 2. Select AD6:AD7 so the font family field in the toolbar becomes blank
> 3. Focus into the font family field and start typing Liberation
> 
> It is displayed in italics and tooltip says the font is missing.
> 
> Also on Windows.
> 
> Bibisected with linux-64-7.0 to b66b80485d855767a78e688e9e989ca0b104e0d8
> tdf#134601 set entry font as combobox control font to take effect


If I'm not mistaken, the LO "default font" is Liberation SANS but most of my cells are Liberation SERIF (My choice) - the variation may be the result of various move or copy events where move will immediately revert the vacated cells to SANS and copying from another unmodified sheet may impose SANS - or any other font, face, cut or weight.

Perhaps, the multiple cuts are confusing the issue - not just in the tooltip but also the freeze experienced when ther are more than two cells to modify.
Comment 4 Buovjaga 2023-04-06 14:50:19 UTC
(In reply to Colin from comment #3)
> (In reply to Buovjaga from comment #0)
> > 1. Open attachment 186097 [details]
> > 2. Select AD6:AD7 so the font family field in the toolbar becomes blank
> > 3. Focus into the font family field and start typing Liberation
> > 
> > It is displayed in italics and tooltip says the font is missing.
> > 
> > Also on Windows.
> > 
> > Bibisected with linux-64-7.0 to b66b80485d855767a78e688e9e989ca0b104e0d8
> > tdf#134601 set entry font as combobox control font to take effect
> 
> 
> If I'm not mistaken, the LO "default font" is Liberation SANS but most of my
> cells are Liberation SERIF (My choice) - the variation may be the result of
> various move or copy events where move will immediately revert the vacated
> cells to SANS and copying from another unmodified sheet may impose SANS - or
> any other font, face, cut or weight.
> 
> Perhaps, the multiple cuts are confusing the issue - not just in the tooltip
> but also the freeze experienced when ther are more than two cells to modify.

It is not anything specific to your document. I just had it at hand conveniently. You can also use a blank doc and change the font in two cells.
Comment 5 Caolán McNamara 2023-04-06 16:08:12 UTC
I suspect because its "blank" that the fontname is empty and doesn't exist so its in italic "missing font" mode and stays that way until the font changes. I'll probably have to look back and an older version to see what way it used to work originally.
Comment 6 Commit Notification 2023-04-07 14:55:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7087e5b9be3a099743f60ba721305f6cc607eaef

Resolves: tdf#154680 don't mark an empty fontname as italic for "unknown"

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2023-04-07 14:56:26 UTC
done in trunk to make a blank entry not unknown font and so not italic when typed into. Backport to 7-5 in gerrit.
Comment 8 Commit Notification 2023-04-07 18:31:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c1ab43ff9a7601998685ff4a1300d6050e0c5c92

Resolves: tdf#154680 don't mark an empty fontname as italic for "unknown"

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.