Resolves: tdf#154680 don't mark an empty fontname as italic for "unknown"

its used for 'ambigious' rather than 'unknown'

Change-Id: I1aeb2f825c5e611e0a943a6ce5f3ab58658701bf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150136
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>